# kbox

./: .cursorrules  .dockerignore  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FEATURE_IDEAS.md  KARAOKE_REFERENCE.md  LICENSE  ONBOARDING_NOTES.md  Pipfile  README.md  README_TESTING.md  SETUP_MACOS.md  SETUP_YOUTUBE_API.md  SIGNAL_HANDLING_SOLUTION.md  TEST_PLAN.md  TODO  configure_api_key.py  configure_audio_input.py  conftest.py  deploy.sh  docker-compose.yml  jsconfig.json  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_kbox.sh  setup_api_key.sh  test.py  test_audio_mixing.py  test_manual.py  test_signal_handling.py  test_signal_simple.py  test_signal_working.py  test_video.py
.github/workflows/: ci.yml
docs/: HARDWARE_SETUP.md
kbox/: audio.py  cache.py  config.py  config_manager.py  database.py  history.py  interstitials.py  llm.py  main.py  midi.py  models.py  overlay.py  platform.py  playback.py  queue.py  server.py  song_metadata.py  streaming.py  suggestions.py  user.py  video_library.py  video_source.py  youtube.py  ytdlp.py
kbox/web/: __init__.py  server.py
kbox/web/static/js/: app.js  auth.js  config.js  controls.js  modals.js  pitch.js  playback.js  queue.js  search.js  song-settings.js  state.js  utils.js
kbox/web/templates/: display.html  index.html
kbox/web/templates/components/: config_screen.html  header.html  main_screen.html  modals.html  operator_controls.html  your_turn_screen.html
test/: run_tests.sh  test_api.py  test_browser_playback.py  test_cache.py  test_config_manager.py  test_database.py  test_events.py  test_history.py  test_integration.py  test_interstitials.py  test_llm.py  test_overlay.py  test_playback.py  test_playback_history.py  test_queue.py  test_song_metadata.py  test_streaming.py  test_suggestions.py  test_user.py  test_video_library.py  test_video_source.py  test_youtube.py  test_ytdlp.py
test/e2e/: conftest.py  test_config.py  test_identity.py  test_js_helpers.py  test_operator.py  test_queue_ui.py  test_search.py  test_smoke.py
test/support/: app_factory.py
