[project]
name = "kbox"
version = "0.1.0"
description = "Self-contained open-source karaoke system"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "itsdangerous",
    "google-api-python-client",
    "yt-dlp",
    "qrcode[pil]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kbox"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "gstreamer: tests that require GStreamer (may be skipped if unavailable)",
]
filterwarnings = [
    "ignore::DeprecationWarning:gi.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long - let formatter handle it

[tool.ruff.lint.per-file-ignores]
"test/*" = ["E402", "E722", "F841"]  # E402: imports after pytestmark, E722: bare except, F841: unused vars for setup

[tool.mypy]
python_version = "3.13"
warn_return_any = false  # Too noisy for database/external library returns
warn_unused_configs = true
ignore_missing_imports = true  # GStreamer/gi has no stubs
exclude = ["test/"]
# Will enable checks one at a time: var-annotated ✅, return-value ✅, assignment ✅, valid-type (in progress)
disable_error_code = ["attr-defined", "union-attr"]





